<resources>
    <string name="app_name">售药机</string>
    <string name="action_settings">Settings</string>
    <string name="get_drug">取药</string>
    <string name="buy_drug">购药</string>
    <string name="query">寻医问药</string>
    <string name="title_activity_get_product">GetProductActivity</string>
    <string name="sample">sample</string>
    <string name="print">打印机</string>
    <string name="login">登录</string>
    <string name="term_init">终端初始化</string>
    <string name="term_no">终端号</string>
    <string name="serial_no">机身号</string>
    <string name="confirm">初始化</string>
    <string name="getProduct">取货</string>
    <string name="back">返回</string>
    <string name="admin">后台</string>
    <string name="reset">重置</string>
    <string name="init_serila">初始化打印机</string>
    <string name="init_pos">初始化pos</string>
    <string name="init_sale">初始化售货机</string>
    <string name="backHome">返回首页</string>
    <string name="checkUpdate">检查更新</string>
    <string name="sysout">退出</string>
    <string name="onekeybuhuo">一键补满</string>
    <string name="onekeyclear">清卡货</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="app_version">auto_sale</string>


    <string name="about_msg">
Serial Port API sample v1.1\n
\n
This program is the sample application provided with project android-serialport-api.\n
\n
More information and bug report on [http://code.google.com/p/android-serialport-api]\n
\n
Copyright 2010-2011 Cedric Priscal\n
\n
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at\n
\n
http://www.apache.org/licenses/LICENSE-2.0\n
\n
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.\n
	</string>
    <string name="error_configuration">Please configure your serial port first.</string>
    <string name="error_security">You do not have read/write permission to the serial        port.</string>
    <string name="error_unknown">The serial port can not be opened for an unknown        reason.</string>
    <string name="title_activity_test">TestActivity</string>

</resources>
