<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal"
    android:background="@drawable/sky">

    <Button
        android:id="@+id/btn_get_drug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_drug" />

    <Button
        android:id="@+id/btn_query"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/query" />
    <Button
        android:id="@+id/btn_sample"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="打印机"
        android:id="@+id/btn_print"
        android:layout_gravity="center_vertical" />


</LinearLayout>