<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_admin_mcno"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="16sp"
            />

    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

         <Button
            android:id="@+id/btn_clear_saleList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:text="清空上送流水" />
        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:text="@string/back" />
        <Button
            android:id="@+id/btn_back_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:text="@string/backHome" />

        <Button
            android:id="@+id/btn_sys_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:text="@string/sysout" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp">

        <TextView
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="订单号" />
 <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="货道编号" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="商品名称" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="支付状态" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="出货状态" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="上送状态" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="交易时间" />

    </LinearLayout>

    <com.ys.ui.view.LMRecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="20dp" />

</LinearLayout>